jenkins/templates/dm-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: deploymentmanager
  labels:
    app: deploymentmanager
spec:
  containers:
  - name: deploymentmanager
    image: armdocker.rnd.ericsson.se/proj-eric-oss-drop/eric-oss-deployment-manager:latest
    command: [/bin/sleep, 3650d]
    imagePullPolicy: IfNotPresent
  imagePullSecrets:
  - name: k8s-registry-secret
  restartPolicy: Always
