jenkins/templates/registry-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-registry
  namespace: container-registry
  labels:
    app: docker-registry
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - docker-registry.hall144.rnd.gic.ericsson.se
    secretName: docker-registry-tls
  rules:
  - host: docker-registry.hall144.rnd.gic.ericsson.se
    http: 
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: docker-registry
              port:
                number: 5000
