jenkins/templates/networkPolicyMonitoring.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dets-federation-policy
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dets-monitoring
  podSelector:
    matchLabels:
      app: eric-pm-server
  policyTypes:
    - Ingress
